--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,15 +1,37 @@
 {
   "home": {
     "listen": "My Music",
-    "about": "Share and listen to new music by up-and-coming artists"
+    "about": "Share your music and listen to other up-and-coming artists",
+    "songs": "Songs"
+  },
+
+  "header": {
+    "music": "Music",
+    "about": "About",
+    "manage": "Manage",
+    "login_register": "Login/Register",
+    "logout": "Logout"
+  },
+
+  "register": {
+    "register": "Register",
+    "name": "Name",
+    "email": "Email",
+    "password": "Password",
+    "confirm_password": "Confirm Password",
+    "submit": "Submit"
+  },
+
+  "login": {
+    "login": "Login",
+    "email": "Email",
+    "password": "Password",
+    "submit": "Submit"
   },
   "manage": {
     "my_songs": "My Songs"
   },
-  "register": {
-    "TOS": "Terms of Service",
-    "accept": "I accept Music's {0}"
-  },
+
   "song": {
     "comment_count": "0 comments | 1 Comment | {count} Comments"
   }
