change name of app

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,6 +1,6 @@
 {
   "home": {
-    "listen": "Nice Riff!",
+    "listen": "Riffs!",
     "about": "Share your musical ideas with the world",
     "songs": "Riffs"
   },
