--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -1,7 +1,8 @@
 {
   "home": {
     "listen": "リフス!",
-    "about": "音楽のアイデアを世界に聞かせましょう"
+    "about": "音楽のアイデアを世界に聞かせましょう",
+    "songs": "音楽"
   },
 
   "header": {
