--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -1,12 +1,12 @@
 {
   "home": {
-    "listen": "リフス!",
-    "about": "音楽のアイデアを世界に聞かせましょう",
-    "songs": "音楽"
+    "listen": "ワァオ・音楽!",
+    "about": "新しい曲、カバー、音楽のアイデアを世界と共有するための場所。",
+    "songs": "チューンズ"
   },
 
   "header": {
-    "music": "リフ",
+    "music": "ミュージック",
     "record": "記録",
     "profile": "プロフィール",
     "login_register": "ログイン/新規登録",
@@ -30,7 +30,7 @@
   },
 
   "profile": {
-    "my_songs": "マイ・リフ",
+    "my_songs": "マイ・曲",
     "my_comments": "マイコメント"
   },
 
@@ -52,7 +52,7 @@
     "genre": "ジャンル",
     "type": "タイプ",
     "option1": "自分が作成した曲",
-    "option2": "自分が作成した音楽のアイデァ（リフ）",
+    "option2": "自分が作成した音楽のアイデァ",
     "option3": "誰か作成した曲のカバー"
   }
 }
