--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -4,6 +4,12 @@
     "about": "新しい曲、カバー、音楽のアイデアを世界と共有するための場所。",
     "songs": "チューンズ"
   },
+  "SongTypePanel": {
+    "all": "全部",
+    "cover": "曲のカバー",
+    "song": "新しい曲",
+    "idea": "アイデア"
+  },
 
   "header": {
     "music": "ミュージック",
