add ability to share music on twitter

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -40,7 +40,8 @@
   },
 
   "song": {
-    "comment_count": "0 comments | 1 Comment | {count} Comments"
+    "comment_count": "0 comments | 1 Comment | {count} Comments",
+    "twitter": "Share this song on Twitter"
   },
 
   "upload": {
