small change to english translation

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,6 +1,6 @@
 {
   "home": {
-    "listen": "Wow On-Ga-Ku!",
+    "listen": "WOW On-Ga-Ku!",
     "about": "A place to share your new songs, covers, and musical ideas with the world.",
     "songs": "Songs"
   },
