change name of app

--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -1,6 +1,6 @@
 {
   "home": {
-    "listen": "ワァオ・音楽!",
+    "listen": "リッフス!",
     "about": "新曲、カバー、音楽のアイデアを世界と共有するためのサイト。",
     "songs": "チューンズ"
   },
