--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,6 +1,6 @@
 {
   "home": {
-    "listen": "WOW On-Ga-Ku!",
+    "listen": "Riffs!",
     "about": "A place to share your new songs, covers, and musical ideas with the world.",
     "songs": "Songs"
   },
@@ -12,7 +12,7 @@
   },
 
   "header": {
-    "music": "Wow Ongaku",
+    "music": "Riffs!",
     "record": "Record",
     "profile": "Profile",
     "login_register": "Login/Register",
